# ContextualForget

./: .dockerignore  .gitattributes  .gitignore  AIHUB_DATA_RECOMMENDATION.md  Dockerfile  FINAL_PROJECT_SUMMARY.md  LICENSE  Makefile  PRE_PUSH_ANALYSIS.md  README.md  REPRODUCIBILITY.md  docker-compose.yml  final_validation_report.md  final_validation_results.json  pyproject.toml  requirements.txt  run_pipeline.py  test_bcf.jsonl
analysis/: graph_rag.py
config/: development.json  production.json
data/: basic_shape_CSG.ifc  events.json  hospital_building.ifc  industrial_building.ifc  office_building.ifc  residential_building.ifc  school_building.ifc  sources.json
docs/: ACADEMIC_DATASET_ACTION_PLAN.md  ACADEMIC_DATASET_FINAL_ANALYSIS.md  AIHUB_DATASET_ANALYSIS.md  AIHUB_QUICK_START.md  ALGORITHMS_AND_FORMULAS.md  CURSOR_AI_ANALYSIS_PROMPT.md  DATA_COLLECTION_GUIDE_5-10.md  DATA_COLLECTION_SUMMARY.md  DATA_CREDIBILITY_ASSESSMENT.md  FINAL_DATA_STRATEGY.md  FINAL_RESEARCH_REPORT.md  UNIFIED_RESEARCH_OBJECTIVES.md  api_reference.md  installation.md  ltm_ifc_events.md  performance.md  quick_start.md  research_plan.md  research_roadmap.md  research_validation.md  troubleshooting.md  tutorial.md
eval/: BENCHMARK_REPORT.md  BM25_BENCHMARK_REPORT.md  COMPARISON_REPORT.md  EXPERT_VALIDATION_FORM.md  VECTOR_BENCHMARK_REPORT.md  benchmark_report.json  bm25_benchmark_report.json  comparison_report.json  fill_gold_standard.py  gold.jsonl  gold_enhanced.jsonl  gold_final.jsonl  gold_original.jsonl  gold_standard.jsonl  gold_standard_comprehensive.jsonl  gold_standard_comprehensive_stats.json  gold_standard_fixed.jsonl  gold_standard_generator.py  gold_standard_real_data.jsonl  gold_standard_stats.json  gold_standard_v2.jsonl  gold_standard_v3.jsonl  gold_standard_v3_fixed.jsonl  gold_standard_validation.json  metrics.py  metrics_v2.py  run_benchmark.py  run_bm25_benchmark.py  run_comparison.py  run_vector_benchmark.py  test_bm25.py  test_vector.py  vector_benchmark_report.json
examples/: README.md  advanced_usage.py  demo.ipynb  quick_start.py
(+759 files in other folders)
